_bonita/7.7/index.md
---
layout : doc
title : "index"
version : "7.7"
categories:

order : 220
---
#  Bonita Documentation

Welcome to the Bonita documentation website.

Click on the **links** below to find useful information quickly, or browse the whole content tree, or use the **table of contents** to go straight to the information you want to read.

<div class="col-md-4">
<div class="panel panel-default">
<div class="panel-heading">Highlights</div>
<div class="panel-body">
<div class="menu-block-wrapper">

* [Release notes {{page.version}}]({{"bonita/7.7/release-notes" | relative_url}})<!--{li:.first .leaf}-->
* [Collaborative development with Git]({{"bonita/7.7/development/workspaces-and-repositories" | relative_url}}#git)<!--{li:.first .leaf}-->
* Business data access control (BDM AC)<!--{li:.first .leaf}-->
* [Save a form]({{"bonita/7.7/release-notes" | relative_url}}#save-form)<!--{li:.first .leaf}-->
* [New case overview form]({{"bonita/7.7/release-notes" | relative_url}}#new-case-overview)<!--{li:.first .leaf}-->
* [LDAP synchronizer handles Custom User Information]({{"bonita/7.7/application-and-process-design/organization/ldap-synchronizer" | relative_url}}#cui)    <!--{li:.first .leaf}-->
<!--{ul:.menu .nav}-->

</div>
</div>
</div>
</div>
<div class="col-md-4">
<div class="panel panel-default">
<div class="panel-heading">Getting started</div>
<div class="panel-body">
<div class="menu-block-wrapper">

* [Getting started tutorial]({{"bonita/7.7/application-and-process-design/application-and-process-design-overview/getting-started-tutorial" | relative_url}})<!--{li:.first .leaf}-->
* [Process diagram overview]({{"bonita/7.7/application-and-process-design/process-modeling/diagrams/diagram-overview" | relative_url}})<!--{li:.leaf}-->
* [Key concepts]({{"bonita/7.7/application-and-process-design/application-and-process-design-overview/key-concepts" | relative_url}})<!--{li:.leaf}-->
* [UI Designer overview]({{"bonita/7.7/application-and-process-design/page-and-form-development/ui-designer/ui-designer-overview" | relative_url}})<!--{li:.leaf}-->
* [Bonita Studio installation]({{"bonita/7.7/installation/bonita-bpm-studio-installation" | relative_url}})<!--{li:.leaf}-->
* [Basic Bonita platform installation]({{"bonita/7.7/installation/basic-bonita-platform-installation/tomcat-bundle" | relative_url}})<!--{li:.leaf}-->
* [Create your first project with the Engine APIs and Maven]({{"bonita/7.7/development/engine-api/create-your-first-project-with-the-engine-apis-and-maven" | relative_url}})<!--{li:.last .leaf}-->
<!--{ul:.menu .nav}-->

</div>
</div>
</div>
</div>
<div class="col-md-4">
<div class="panel panel-default">
<div class="panel-heading">Resources</div>
<div class="panel-body">
<div class="menu-block-wrapper menu-name-menu-quicklinks">

* [Download Bonita software](http://www.bonitasoft.com/how-we-do-it/downloads)<!--{li:.first .leaf}-->
* [BPMN standard](http://www.bpmn.org/)<!--{li:.leaf}-->
* [The Ultimate Guide to BPMN2](http://www.bonitasoft.com/for-you-to-read/bpm-library/ultimate-guide-bpmn)<!--{li:.leaf}-->
* [Best Practices for Continuous Integration with Bonita](http://www.bonitasoft.com/for-you-to-read/bpm-library/best-practices-continuous-integration-bonita-bpm)<!--{li:.leaf}-->
* [Javadoc](http://documentation.bonitasoft.com/javadoc/api/{{page.version}}/index.html)<!--{li:.leaf .last}-->
<!--{ul:.menu .nav}-->

</div>
</div>
</div>
</div>
